<?xml version="1.0" encoding="utf-8"?>

<com.inz.z.base.view.widget.BaseRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_root_brl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/splash_content_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/snow">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/splash_bottom_ll"
            android:contentDescription="@string/base_image_holder"
            android:scaleType="centerCrop"
            android:src="@drawable/image_load_error" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/splash_top_end_num_tv"
                android:layout_width="@dimen/icon_normal_size"
                android:layout_height="@dimen/icon_normal_size"

                android:layout_marginTop="@dimen/border_lr_dimen"
                android:layout_marginEnd="@dimen/border_lr_dimen"
                android:gravity="center"
                android:text="@string/base_number"
                android:textSize="@dimen/subheading_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/splash_bottom_ll"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_alignParentBottom="true"
            android:background="@color/card_main_color"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/subheading_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/splash_version_tv"
                style="@style/NoteBookAppTheme.Text.Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/content_space_between_dimen"
                android:text="@string/base_content"
                android:textSize="@dimen/caption_text_size" />
        </LinearLayout>
    </RelativeLayout>

</com.inz.z.base.view.widget.BaseRelativeLayout>