<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Base.Layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp02"
    android:background="@drawable/bg_card_item"
    android:paddingTop="@dimen/margin_text_layout"
    android:paddingBottom="@dimen/margin_text_layout">

    <ImageView
        android:id="@+id/base_item_cf_list_iv"
        style="@style/Base.ImageView"
        android:layout_width="@dimen/touch_target_height"
        android:layout_height="@dimen/touch_target_height"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/base_image"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/base_item_cf_table_bottom_ll"
        style="@style/Base.Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_text_layout"
        android:layout_marginEnd="@dimen/margin_text_layout"
        android:layout_toStartOf="@id/base_item_cf_list_cbox"
        android:layout_toEndOf="@id/base_item_cf_list_iv"
        android:orientation="vertical">

        <TextView
            android:id="@+id/base_item_cf_list_title_tv"
            style="Base.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/base_title" />

        <TextView
            android:id="@+id/base_item_cf_list_content_tv"
            style="@style/Base.Text.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_text_layout"
            android:text="@string/base_content" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/base_item_cf_list_cbox"
        style="@style/Base.CheckBox.Min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true" />

</RelativeLayout>