<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_main_color"
    android:orientation="vertical">
    <!-- 提示界面 -->


    <RelativeLayout
        android:id="@+id/note_nav_hint_data_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/border_lr_dimen"
        android:padding="@dimen/layout_padding">

        <TextView
            android:id="@+id/note_nav_hint_year_tv"
            style="@style/NoteBookAppTheme.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/content_space_between_dimen"
            android:gravity="end"
            android:text="@string/base_format_year_month_day"
            android:textColor="@color/accessoryColor"
            android:textSize="@dimen/subheading_text_size" />

        <LinearLayout
            android:id="@+id/note_nav_hint_data_center_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_nav_hint_year_tv"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_card_border"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/layout_nav_padding"
            android:paddingTop="@dimen/layout_padding"
            android:paddingEnd="@dimen/layout_nav_padding"
            android:paddingBottom="@dimen/layout_padding">

            <TextView
                android:id="@+id/note_nav_hint_data_tv"
                style="@style/NoteBookAppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_format_day"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/note_nav_hint_week_tv"
                style="@style/NoteBookAppTheme.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_space_between_dimen"
                android:maxLength="3"
                android:text="@string/base_format_week"
                android:textColor="@color/accessoryColor"
                android:textSize="@dimen/subheading_text_size" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_nav_hint_data_rl"
        android:layout_marginTop="@dimen/border_lr_dimen"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/note_nav_hint_ibtn"
            style="@style/NoteBookAppTheme.ImageButton"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_button_white"
            android:contentDescription="@string/base_image"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_black_24dp" />

    </RelativeLayout>
</RelativeLayout>