<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@drawable/base_bg_dialog"
    android:paddingBottom="0dp">


    <RelativeLayout
        android:id="@+id/base_update_version_top_rl"
        android:layout_width="0dp"
        android:layout_height="@dimen/touch_target_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Base.Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/have_new_version_usable"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/base_update_version_content_nsv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/base_update_version_bottom_rl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/base_update_version_top_rl">

        <LinearLayout
            style="@style/Base.Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_layout">

            <TextView
                android:id="@+id/base_update_version_content_name_tv"
                style="@style/Base.Text.Second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1" />

            <TextView
                android:id="@+id/base_update_version_content_tv"
                style="@style/Base.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/base_update_version_bottom_rl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Operation -->
        <LinearLayout
            android:id="@+id/base_update_version_operation_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_height"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="2">

            <TextView
                android:id="@+id/base_update_version_later_notification_tv"
                style="@style/Base.Text.Button.Dialog.Bottom.Two.Left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_later_notification" />

            <TextView
                android:id="@+id/base_update_version_operation_download_tv"
                style="@style/Base.Text.Button.Dialog.Bottom.Two.Right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_download" />


        </LinearLayout>

        <!-- Progress -->
        <LinearLayout
            android:id="@+id/base_update_version_progress_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tool_bar_height"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/base_update_version_progress_bar"
                style="@style/Base.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:progress="100" />

            <TextView
                android:id="@+id/base_update_version_background_tv"
                style="@style/Base.Text.Button.Dialog.Bottom.One"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dialog_radius"
                android:text="@string/_update_background" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/base_update_version_finish_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_height"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/base_update_version_finish_tv"
                style="@style/Base.Text.Button.Dialog.Bottom.One"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_now_install" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>