<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp02"
    android:background="@drawable/bg_card_item">

    <ImageView
        android:id="@+id/base_item_cf_table_iv"
        style="@style/Base.ImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/base_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="h, 1: 1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/base_item_cf_table_bottom_ll"
        style="@style/Base.Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/text_black_20_color"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_text"
        android:paddingBottom="@dimen/margin_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/base_item_cf_table_title_tv"
            style="Base.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@{chooseFile.fileName, default=@string/base_title}"
            android:textColor="@color/text_white_70_color" />

        <TextView
            android:id="@+id/base_item_cf_table_content_tv"
            style="@style/Base.Text.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_text"
            android:text="@string/base_content"
            android:textColor="@color/text_white_70_color" />

    </LinearLayout>

    <ImageView
        android:id="@+id/base_item_cf_overly_iv"
        style="@style/Base.ImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/choose_file"
        android:src="@drawable/ic_choose_overly"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/base_item_cf_table_cbox"
        style="@style/Base.CheckBox.Min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
